Migrate to java 17 & gradle 7.4.1 & update lib versions